# Mastering-Agentic-AI-Week5

./: .gitignore
DPO/: README.md  brand_voice_huggingface_dpo_demo.ipynb  pyproject.toml  requirements.txt
DPO/data/: brand_voice_preferences.jsonl  brand_voice_trl_dpo.csv  brand_voice_trl_dpo.jsonl  brand_voice_trl_dpo_eval.jsonl  brand_voice_trl_dpo_train.jsonl
DPO/outputs/gen-academy-brand-voice-hf-dpo/: README.md
DPO/outputs/gen-academy-brand-voice-hf-dpo/checkpoint-18/: scheduler.pt  trainer_state.json
DPO/outputs/gen-academy-brand-voice-hf-dpo/checkpoint-27/: adapter_config.json  scheduler.pt  trainer_state.json
DPO/outputs/gen-academy-brand-voice-hf-dpo/checkpoint-9/: README.md  scheduler.pt  trainer_state.json
Ollama/: Appointment_Intent_Router_with_Ollama.ipynb  README.md  SFT_to_GGUF_to_Ollama.md  golden_dataset.csv  pyproject.toml
RFT/: .env.example  README.md  evaluator.py  generate_dataset.py  hard_sql_rft_100_schema.csv  hard_sql_rft_100_schema.jsonl  heldout_infer_sql_rft_30_test_schema_prompt.jsonl  pyproject.toml  rft_inference.ipynb
RFT/scraps/: easy2.jsonl  emsql.jsonl  ground_da.jsonl
SFT/: Finetuning_Workshop_SFT_Demo.ipynb  README.md  finetuning_preference_dataset.csv  requirements.txt
