[project]
name = "appointment-intent-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
